# local-llm-rn

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  local-llm-rn.podspec  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  release.yml
android/: build.gradle.kts  proguard-rules.pro
android/src/main/cpp/: CMakeLists.txt  LocalLLM.cpp
android/src/main/java/com/hilum/localllm/: LocalLLMModule.kt  LocalLLMPackage.kt
examples/expo-test/: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
examples/expo-test/app/: index.tsx
examples/expo-test/components/: ChatBubble.tsx  DeviceInfoCard.tsx
examples/react-native-test/: .gitignore  App.tsx  README.md  app.json  index.js  metro.config.js  package-lock.json  package.json
examples/react-native-test/.maestro/: smoke.yaml
examples/react-native-test/scripts/: bootstrap-native.sh
ios/: LocalLLM.h  LocalLLM.mm
scripts/: prepack.sh  prepare.sh  release.mjs  validate-release.mjs  verify-core-version.mjs  verify-vendoring.sh
src/: NativeLocalLLM.ts  cache.ts  device.ts  errors.ts  index.ts  local-llm.ts  model-manager.ts  native-bridge.ts  rn-downloader.ts  vision.ts
tests/: cache.test.ts  device.test.ts  errors.test.ts  local-llm.test.ts  model-manager.test.ts  native-bridge.test.ts  native-contract.test.ts  package-metadata.test.ts  rn-downloader.test.ts  vision.test.ts
tests/integration/: README.md
